crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ACCESS_GROUP_REF.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ACCESS_GROUP_REF",
  "id": {
    "_type": "HIER_OBJECT_ID",
    "value": "2adac9d8-8bfe-49d0-bd76-6f3c51c6f916"
  },
  "namespace": "local",
  "type": "ACCESS_GROUP"
}
