crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ACTIVITY.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ACTIVITY",
  "name": {
    "_type": "DV_TEXT",
    "value": "Order"
  },
  "archetype_node_id": "at0001",
  "action_archetype_id": "/.*/",
  "description": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "description"
    },
    "archetype_node_id": "at0002"
  }
}
