crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ADDRESS.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ADDRESS",
  "name": {
    "_type": "DV_TEXT",
    "value": "home address"
  },
  "archetype_node_id": "at0005",
  "details": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "details"
    },
    "archetype_node_id": "at0006"
  }
}
