crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ADDRESSED_MESSAGE.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ADDRESSED_MESSAGE",
  "sender": "ehrbase.example.org",
  "sender_reference": "sender-1"
}
