crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ARCHETYPED.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ARCHETYPED",
  "archetype_id": {
    "_type": "ARCHETYPE_ID",
    "value": "openEHR-EHR-COMPOSITION.encounter.v1"
  },
  "rm_version": "1.1.0"
}
