crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ARCHETYPE_ID.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ARCHETYPE_ID",
  "value": "openEHR-EHR-COMPOSITION.encounter.v1"
}
